# Haskell-Logic-Circuits

./: .gitignore  Main.hs  README.md  Tests.hs  logic-sim.cabal  logicsim.cabal
Logic/: Byte.hs  CPU.hs  Circuits.hs  Classes.hs  Gates.hs  Memory.hs  Types.hs  Utils.hs
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: logicsim-0.1.0.0-inplace.conf  package.cache
src/Logic/: Bit.hs  Byte.hs  CPU.hs  Circuits.hs  Classes.hs  Gates.hs  Memory.hs  Types.hs  Utils.hs
