cabal-version:      3.0
name:               logicsim
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Logic.Classes,
      Logic.Types,
      Logic.Bit,  
      Logic.Byte,
      Logic.Gates,
      Logic.Circuits,
      Logic.Memory,
      Logic.CPU,
      Logic.Utils
    build-depends:    
      base >= 4.7 && < 5,
      mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable logic-sim
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base,
        logicsim,
        layoutz,
        process
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite logic-sim-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Tests.hs
    build-depends:    
        base,
        logicsim
